--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "sweetalert2": "^11.7.12"
