--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,3 @@
-# variable global de VITE para usar en el proyecto
+# variables globales de VITE para usar en el proyecto
 VITE_API_BASE_URL=http://localhost:8080
+VITE_API_PAYPAL_CLIENT_ID=AapG8LJHl7UwW_rbgxIoS0AZ1n5EAQMrCPgzpLgY2uk7-kgouktpIWiYPb3VwO5REDUrPAo0j4ufaVCd
