deploy back en amazon

--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,3 @@
 # variables globales de VITE para usar en el proyecto
-VITE_API_BASE_URL=https://app-ecommerce-production-59a9.up.railway.app
+VITE_API_BASE_URL=http://ec2-3-86-240-39.compute-1.amazonaws.com:8080
 VITE_API_PAYPAL_CLIENT_ID=AapG8LJHl7UwW_rbgxIoS0AZ1n5EAQMrCPgzpLgY2uk7-kgouktpIWiYPb3VwO5REDUrPAo0j4ufaVCd
